changes made to jenkins file